--- a/views/edit-app.ejs
+++ b/views/edit-app.ejs
@@ -86,14 +86,9 @@
                     <option value="R">R (18 and up)</option>
                 </select>
 
-                <button type="submit" class="btn btn-primary btn-block mt-3">Post App</button>
+                <button type="submit" class="btn btn-primary btn-block mt-3">Finish Editing</button>
                 <p class="text-black">or <a href="/">go home</a></p>
             </form>
-
-            <div id="success" style="display: none;">
-                <h4 class="mb-3 fw-bold text-primary">Your post has been published!</h4>
-                <p class="text-black">Thank you for using PolarStore. Click <a href="/">here</a> to go back home.</p>
-            </div>
         </div>
     </body>
 </html>
