--- a/views/user.ejs
+++ b/views/user.ejs
@@ -111,7 +111,7 @@
                     <% } %>
                     <hr>
                     <p class="text-muted">PolarStore account created at <%- profile.polarStore.createdAt %></p>
-                    <p class="text-muted">Discord account created at <%- profile.createdAt %></p>
+                    <p class="text-muted">PolarID account created at <%- profile.createdAt %></p>
                 </div>
             </div>
         </div>
