--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,11 @@
     background: var(--dark);
 }
 
+.btn {
+    border-radius: 50px;
+    padding: 3px 20px 3px 20px;
+}
+
 .dark {
     color: var(--light);
     background: var(--dark);
